--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cuiqg/shared-configs",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Biome config for @cuiqg",
   "type": "module",
   "publishConfig": {
@@ -10,6 +10,9 @@
   "exports": {
     "./biome": "./dist/biome.json"
   },
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "start": "gulp",
     "build": "gulp build --prod",
